try new youtube include 2

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: "Just a space to put whatever i feel like :)"
 baseurl: ""
 url: "http://sys49152.net"
 twitter_username: 
-github_username: 
+github_username: ricferr
 
 # Build settings
 markdown: kramdown
